--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --config jest.config.ts",
+    "test:watch": "jest --config jest.config.js --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.44.2",
+    "@types/jest": "^29.5.8",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
@@ -34,7 +37,10 @@
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.47.0",
     "eslint-config-next": "^14.0.0",
-    "typescript": "^5.1.6"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.23.1"
