--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint",
     "start": "next start",
     "test": "jest --config jest.config.ts",
-    "test:watch": "jest --config jest.config.js --watch"
+    "test:watch": "jest --config jest.config.ts --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
