--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "lodash": "^4.17.21",
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.2",
     "@types/jest": "^29.5.8",
+    "@types/lodash": "^4.14.201",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
